# E3SM

./: .gitmodules  build_pam.sh  build_run_e3sm.sh  build_run_pam.sh  cmplr48441.err  run_pam.sh
cime_config/machines/: config_batch.xml  config_machines.xml
cime_config/machines/cmake_macros/: gnugpu_ortce.cmake  gnugpu_pm-gpu.cmake  oneapi-gfortran.cmake  oneapi-gfortrangpu.cmake  oneapi-ifort.cmake  oneapi-ifortgpu.cmake  oneapi-ifx-cuda.cmake  oneapi-ifx.cmake  oneapi-ifxgfortran.cmake  oneapi-ifxgpu-4ccs-cal.cmake  oneapi-ifxgpu-4ccs-cal_ortce.cmake  oneapi-ifxgpu-4ccs.cmake  oneapi-ifxgpu.cmake  oneapi-ifxgpu_ortce.cmake  oneapi-ifxgpu_sunspot.cmake
components/cmake/: build_model.cmake
components/eam/cime_config/: config_component.xml
components/eam/src/cpl/: atm_comp_mct.F90
components/eam/src/dynamics/se/: dyn_comp.F90
components/eam/src/physics/cam/: debug_info.F90
components/eam/src/physics/crm/: physpkg.F90
components/eam/src/physics/crm/pam/: pam_debug.h
components/eam/src/physics/crm/samxx/: CMakeLists.txt  crm_variance_transport.cpp  pressure.cpp  scalar_momentum.cpp  timeloop.cpp
components/eam/src/physics/crm/samxx/bbfft/: configurations-fft.cpp  generate-fft.cpp
components/eam/src/physics/crm/samxx/test/: CMakeLists.txt  cpp_driver.F90  fortran_driver.F90
components/eam/src/physics/crm/samxx/test/cpp2d/: CMakeLists.txt
components/eamxx/src/physics/p3/: CMakeLists.txt  p3_functions.hpp
components/eamxx/src/physics/p3/disp/: p3_cloud_sed_impl_disp.cpp  p3_ice_sed_impl_disp.cpp  p3_main_impl_disp.cpp  p3_rain_sed_impl_disp.cpp
components/eamxx/src/physics/p3/impl/: p3_cloud_sed_impl.hpp  p3_ice_sed_impl.hpp  p3_main_impl.hpp  p3_rain_sed_impl.hpp
components/eamxx/src/physics/shoc/: atmosphere_macrophysics.cpp  shoc_functions.hpp
components/eamxx/src/physics/shoc/impl/: shoc_main_impl.hpp
components/eamxx/src/share/util/: scream_utils.hpp
components/elm/src/main/: decompMod.F90  elm_driver.F90  pftvarcon.F90
components/homme/cmake/: Kokkos.cmake
components/homme/src/share/compose/: cedr_caas.hpp  cedr_cdr.hpp  cedr_kokkos.hpp  cedr_local.hpp  cedr_qlt.hpp  cedr_tree.cpp  cedr_util.hpp  compose_slmm.cpp  compose_slmm_siqk.cpp  compose_slmm_siqk.hpp
verification/: nccmp.py  verify.sh
